--- a/demo/package.json
+++ b/demo/package.json
@@ -7,6 +7,7 @@
     "start": "develop",
     "build": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
+    "deploy": "gatsby clean && gatsby build && gh-pages -d public",
     "clean": "gatsby clean"
   },
   "dependencies": {
