--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "gatsby": "^4.0.0",
+    "gh-pages": "^5.0.0",
     "lerna": "^4.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -19,6 +20,7 @@
     "lerna": "lerna",
     "demo:clean": "yarn workspace demo clean",
     "dev": "yarn workspace demo develop",
+    "deploy": "gatsby clean && gatsby build && gh-pages -d public",
     "demo:build": "NODE_ENV=production yarn workspace demo build",
     "test": "lerna run test --",
     "lint": "lerna run lint -- --fix",
