--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lerna": "lerna",
     "demo:clean": "yarn workspace demo clean",
     "dev": "yarn workspace demo develop",
-    "deploy": "gatsby clean && gatsby build && gh-pages -d public",
+    "dep":"yarn workspace demo deploy",
+    "deploy": "gatsby clean && gatsby build --prefix-paths && gh-pages -d public",
     "demo:build": "NODE_ENV=production yarn workspace demo build",
     "test": "lerna run test --",
     "lint": "lerna run lint -- --fix",
