--- a/packages/gatsby-remark-wiki-link/package.json
+++ b/packages/gatsby-remark-wiki-link/package.json
@@ -15,7 +15,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hikerpig/gatsby-project-kb.git"
+    "url": "git+https://github.com/GLLSLP/ASHY-WIKI.git"
   },
   "scripts": {
     "prepublish": "tsc",
