--- a/packages/gatsby-theme-kb/package.json
+++ b/packages/gatsby-theme-kb/package.json
@@ -67,7 +67,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hikerpig/gatsby-project-kb.git"
+    "url": "https://github.com/GLLSLP/ASHY-WIKI.git"
   },
   "bugs": {
     "url": "https://github.com/hikerpig/gatsby-project-kb/issues"
